# CMake-template

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
examples/Arduino/: CMakeLists.txt
examples/Arduino/sketch-example/: sketch-example.ino
examples/my-example/: CMakeLists.txt  my_example.cpp  my_example.hpp
include/: hello_world.hpp
src/: hello_world.cpp
tests/: CMakeLists.txt
